+ reworking recalculation of the document
+ implementing Feature viewing modes and material
  - Python binding for that all
+ ViewProvider framework in Inventor viewer
+ remove CasCade Viewer
+ Interpreter::runString returns now a value
+ Improving mouse interaktions
  - fix and enable Spin rotation
  - implement panTo middle mouse double click
+ implementing selection
+ using "right" transparency mode
+ RFE 1187174 implemented (Calling "print" for internal Python objects)
+ Several improvements:
  - Command Std_ViewFullScreen switched to toggle command
  - Use ESC or F to leave fullscreen mode (hard coded in MDIView)
  - Ignore ContextEvents and accelerators while the progress bar is working
  - Use double prescision for double in parameter editor
  - Consider fullscreen windows in ApplicationWindow::activeView()
+ Initial impl. of a simple color legend
+ Show progressbar not from beginning but after a few seconds
+ Using own event loop (QDialog not exception-safe)
+ RFE 1149709	Missing waitcursor implemented (using Sequencer therefore)
+ RFE 1211364	Clean up when closing App (using Python's Py_AtExit and Py_Finalize)
+ BUG 1232848   Recursion in IsKind()


Version: V0.1B120 Date: Tue Jul 26 17:09:13 2005 +++++++++++++++++++++++++++++++
+ Move import shapes from Import to Part
+ Reworking Feature Property handling
+ Implementing Feature Linking
+ Add Naming to Features (AddFeature() needs now a Type and a Name
+ Moving Vector3D and Matrix4D in Base::
+ Moving DataWithProperty in Base::
+ Reworking Points
+ Points load Ascii
+ CurveNet Feature in Part
+ Bug 1242877 fixed (Reference counting)

Version: V0.3B1 Date: Thu Aug 11 06:20:13 2005 +++++++++++++++++++++++++++++++
+ Begin Workbench framework redesign
+ BUG 1216922 fixed (Bug with active document)

Version: V0.3B2 Date: Tue Sep 20 11:42:39 2005 +++++++++++++++++++++++++++++++
+ Workbench redesign finished (RFE 1110586)
+ ApplicationWindow splitted in Application and MainWindow