@@ -71,3 +71,27 @@ void Exception::ReportException (void) const
 {
 	Console().Error("\nException (%s): %s \n",Console().Time(),what());
 }
+
+// ---------------------------------------------------------
+
+AbortException::AbortException(const char * sMessage)
+  : Exception( sMessage )
+{
+}
+
+AbortException::AbortException()
+{
+  _sErrMsg = "Aborted operation";
+}
+
+AbortException::AbortException(const AbortException &inst)
+{
+	SetMessage(inst._sErrMsg.c_str());
+}
+
+const char* AbortException::what() const throw()
+{
+  return Exception::what();
+}
+
+
